# Qwen2.5-0.5B-Semantic-Similarity-Tuning

./: .gitignore  DESIGN.md  demo_train.py  download_model.sh  eval_model.py  pyproject.toml  requirements.txt  setup_autodl.sh
data/BQ_Corpus/: README.md  dataset_infos.json  dev.csv
src/: config.py  embedding_eval.py  inference.py  preprocess.py  train.py
