[project]
name = "nlpsftproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]
